data/derived/comb/progs/unify/prog7002.ml.out
Characters 156-158:
  in wwhile(go, b);;
            ^^
Error: This expression has type int -> int
       but an expression was expected of type int -> int * bool
       Type int is not compatible with type int * bool 
